<resources>
    <string name="app_name">Spotify-Wrapped</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">password\n</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="view_past_wrapped">View Past Wrapped</string>

    <string name="home_page">Home Page</string>
    <string name="see_my_wrapped">See My Wrapped</string>
    <string name="is_it_a_holiday">Is it a holiday?</string>
    <string name="share_with_friends">Share with friends!</string>
    <string name="reccomendations">Reccomendations</string>
    <string name="recommendations">Recommendations</string>
    <string name="past_wrapped">Check Past Wrapped</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_wrapped">My Wrapped</string>
    <string name="menu_holiday">Holiday Wrapped</string>
    <string name="happy_valentines_day">Happy Valentines Day!</string>
    <string name="Next">Next</string>
    <string name="recommendations_text">Recommendations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="__1_string">#1</string>
    <string name="billie_elish_string"></string>
    <string name="__2_string">#2</string>
    <string name="artist_string"></string>
    <string name="__3_string">#3</string>
    <string name="taylor_swift_string"></string>
    <string name="__4_string">#4</string>
    <string name="artist_ek1_string"></string>
    <string name="__5_string">#5</string>
    <string name="artist_ek2_string"></string>
    <string name="your_top_artists_string">Your Top Artists</string>

    <string name="your_top_songs_string">Your Top Songs</string>


    <string name="top_artists_string">Top Artists</string>
    <string name="top_songs_string">Top Songs</string>
    <string name="__1_ariana_grande__2_myd__3_weval__4_le_wanski__5_drake_string">#1  Ariana Grande#2  Myd#3  Weval#4  Le Wanski#5  Drake</string>
    <string name="__1_ariana_grande__2_myd__3_weval__4_le_wanski__5_drake_ek1_string">#1  Ariana Grande#2  Myd#3  Weval#4  Le Wanski#5  Drake</string>
    <string name="recommended_artists">Recommended Artists</string>
</resources>