<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mywrapped"
            android:icon="@drawable/wrapped_icon"
            android:title="@string/menu_wrapped" />
        <item
            android:id="@+id/nav_holiday"
            android:icon="@drawable/holiday_icon"
            android:title="@string/menu_holiday" />
        <item
            android:id="@+id/nav_recommendations"
            android:icon="@drawable/audiotrack"
            android:title="@string/recommendations_text" />
    </group>
</menu>