<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.spotifywrapped.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mywrapped"
        android:name="com.example.spotifywrapped.ui.wrapped.WrappedFragment"
        android:label="@string/menu_wrapped"
        tools:layout="@layout/fragment_wrapped" />

    <fragment
        android:id="@+id/nav_holiday"
        android:name="com.example.spotifywrapped.ui.holiday.HolidayFragment"
        android:label="@string/menu_holiday"
        tools:layout="@layout/fragment_holiday" />

    <fragment
        android:id="@+id/nav_recommendations"
        android:name="com.example.spotifywrapped.ui.recommendations.RecsFragment"
        android:label="@string/recommendations_text"
        tools:layout="@layout/fragment_recs" />
</navigation>