<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orangebackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/signin"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_margin="10dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_margin="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_audiotrack_24"
        android:drawablePadding="20dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@id/password"
        android:text="@string/LOGIN"
        android:backgroundTint="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpass"
        android:layout_below="@id/loginButton"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />



</RelativeLayout>