<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:id="@+id/homeActivity"
    tools:context=".BaseActivity">


    <TextView
        android:id="@+id/homePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/home_page"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wrappedButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homePage"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#30ffffff"
        android:text="@string/see_my_wrapped"
        android:textColor="@color/black" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/recButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wrappedButton"
        android:text="@string/recommendations"
        android:backgroundTint="#30ffffff"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/past_wrapped"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recButton"
        android:text="@string/past_wrapped"
        android:backgroundTint="#30ffffff"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/black" />

</RelativeLayout>
