<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".BaseActivity">

    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/view_past_wrapped"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:ignore="SpUsage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountTitle"
        android:layout_marginTop="88dp"
        android:backgroundTint="#30ffffff"
        android:text="@string/create_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/accountTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccount"
        android:layout_marginTop="20dp"
        android:backgroundTint="#30ffffff"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToHome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="20dp"
        android:backgroundTint="#30ffffff"
        android:text="@string/home_page"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>